# otf2_cli_profile

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: BatsTests.cmake  FindOTF2.cmake  FindSphinx.cmake  GTest.cmake  QuartoFrontend.cmake
docs/: CMakeLists.txt  Software_Architecture.md  conf.py  index.md
include/: all_data.h  data_tree.h  definitions.h  main_structs.h  utils.h
include/analysis/: access_pattern_detection.h
include/reader/: OTF2Reader.h  OTFReader.h  jsonreader.h
scripts/: output.html  output.qmd  results.json
scripts/prototype/: data.json  index.html  style.css
src/: data_tree.cpp  definitions.cpp  otf-profiler.cpp
src/analysis/: access_pattern_detection.cpp
src/output/: create_cube.cpp  create_json.cpp  data_out.cpp
src/reader/: OTF2Reader.cpp  OTFReader.cpp  jsonreader.cpp  tracereader.cpp
tests/: README.md  file_access_pattern.c  setup_suite.bash  test_file_stats.bats
tests/integration/: README.md  setup_suite.bash  test_file_stats.bats
tests/integration/programs/: file_access_pattern.c  mpi_contiguous.c  mpi_hello_world.c  mpi_random.c  mpi_strided.c  posix_hello_world.c  posix_hello_world.cpp
tests/unittests/: detect_local_access_pattern.cpp
